--- a/views/SCSE-Buscador.html
+++ b/views/SCSE-Buscador.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>    
     <head>    
-        <meta charset="UTF-8">
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8"> 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>SCSE-MenuProfesores-2</title>
         <link href="assets/CSS/SCSE-MP2.css" rel="stylesheet"/>
@@ -69,8 +69,8 @@
                 <a class="formato-ancla seleccion" href="mailto:semas@unmsm.edu.pe">email: semas@unmsm.edu.pe</a>
             </div>
         </footer> 
-        <script src="https://code.jquery.com/jquery-3.6.4.js"></script>
-        <script>
+        <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.4.js"></script>
+        <script type="text/javascript">
 			$.ajax({  
       			url: "/usuarioLogueado",  
       			dataType: 'json',  
