--- a/views/SCSE-MenuProfesores.html
+++ b/views/SCSE-MenuProfesores.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
     <head>    
-        <meta charset="utf-8">    
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">     
         <title>SCSE-Profesor</title>     
         <link href="assets/CSS/SCSE-MP2.css" rel="stylesheet"/>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
@@ -98,8 +98,8 @@
                 <a class="formato-ancla seleccion" href="mailto:semas@unmsm.edu.pe">email: semas@unmsm.edu.pe</a>
             </div>
         </footer>
-        <script src="https://code.jquery.com/jquery-3.6.4.js"></script>
-        <script>
+        <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.4.js"></script>
+        <script type="text/javascript">
             $("#nombreProfesor").prop( "disabled", true );
             $("#apellidoProfesor").prop( "disabled", true );
             $("#correoProfesor").prop( "disabled", true );
