--- a/views/SCSE-Profesor.html
+++ b/views/SCSE-Profesor.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>    
     <head>    
-        <meta charset="utf-8">    
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">    
         <title>SCSE-Profesor</title>     
         <link href="assets/CSS/SCSE-MP2.css" rel="stylesheet"/>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
@@ -122,9 +122,9 @@
                 <a class="formato-ancla seleccion" href="mailto:semas@unmsm.edu.pe">email: semas@unmsm.edu.pe</a>
             </div>
         </footer>
-        <script src="https://code.jquery.com/jquery-3.6.4.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-        <script>
+        <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.4.js"></script>
+        <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+        <script type="text/javascript">
             $.ajax({  
       			url: "/usuarioLogueado",  
       			dataType: 'json',  
