--- a/views/SCSE-Register.html
+++ b/views/SCSE-Register.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"/>
@@ -44,9 +44,9 @@
 
         </main>
 
-        <script src="assets/js/SCSE-SLR.js"></script>
-        <script src="https://code.jquery.com/jquery-3.6.4.js"></script>
-        <script>
+        <script type="text/javascript" src="assets/js/SCSE-SLR.js"></script>
+        <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.4.js"></script>
+        <script type="text/javascript">
             var opcion="";
             $("#cod").hide();
             $("#tipo1").on( "click", function() {
