--- a/views/SCSE-Login.html
+++ b/views/SCSE-Login.html
@@ -8,9 +8,7 @@
     <link type="text/css" href="assets/css/SCSE-ELR.css" />
 </head>
 <body>
-
         <main>
-
             <div class="contenedor__todo">
                 <div class="caja__trasera">
                     <div class="caja__trasera-register">
@@ -35,8 +33,8 @@
 
         </main>
 
-        <script src="assets/js/SCSE-SLR.js"></script>
-        <script src="https://code.jquery.com/jquery-3.6.4.js"></script>
+        <script type="text/javascript" src="assets/js/SCSE-SLR.js"></script>
+        <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.4.js"></script>
         <script>
             $("#boton").on( "click", function() {
 			    var studentdata = { username: $("#username").val(), password: $("#password").val()};
