--- a/views/SCSE-Register.html
+++ b/views/SCSE-Register.html
@@ -6,7 +6,7 @@
     <title>Register</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"/>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/SCSE-ELR.css">
+    <link type="text/css" href="assets/css/SCSE-ELR.css">
 </head>
 <body>
 
