--- a/views/SCSE-Login.html
+++ b/views/SCSE-Login.html
@@ -33,7 +33,7 @@
 
         </main>
 
-        <script type="text/javascript" src="/assets/js/SCSE-SLR.js"></script>
+        <script type="text/javascript" src="/views/assets/js/SCSE-SLR.js"></script>
         <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.4.js"></script>
         <script>
             $("#boton").on( "click", function() {
