--- a/views/SCSE-Login.html
+++ b/views/SCSE-Login.html
@@ -51,7 +51,7 @@
 
                 if (window.innerWidth > 850){
                     caja_trasera_register.style.display = "block";
-                    caja_trasera_login.style.display = "block";
+                    //caja_trasera_login.style.display = "block";
                 }else{
                     caja_trasera_register.style.display = "block";
                     caja_trasera_register.style.opacity = "1";
