--- a/views/SCSE-MenuProfesores.html
+++ b/views/SCSE-MenuProfesores.html
@@ -18,7 +18,7 @@
                     <div id="contenedor-titulo"><h2 id="titulo_head">Tu curso</h2></div>
                 </div>
                 <nav>
-                    <a href="" ><i class="glyphicon glyphicon-log-in"></i> Ofrecer curso</a>
+                    <a href="SCSE-Buscador.html" ><i class="glyphicon glyphicon-log-in"></i> Ir a cursos</a>
                     <a href="SCSE-Login.html" ><i class="glyphicon glyphicon-log-out"></i> Cerrar sesion</a>
                 </nav>
             </div>
