--- a/views/SCSE-Login.html
+++ b/views/SCSE-Login.html
@@ -1,42 +1,60 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"> 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-    <link type="text/css" href="assets/CSS/SCSE-ELR.css" />
-</head>
-<body>
-        <main>
-            <div class="contenedor__todo">
-                <div class="caja__trasera">
-                    <div class="caja__trasera-register">
-                        <h3>¿Aún no tienes una cuenta?</h3>
-                        <p>Regístrate para que puedas iniciar sesión</p>
-                        <button onclick="location.href='SCSE-Register.html'"
-                                id="btn__registrarse">Regístrarse</button>
+    <head>    
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8"> 
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>SCSE-MenuProfesores-2</title>
+        <link href="assets/CSS/SCSE-MP2.css" rel="stylesheet"/>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">     
+    </head>
+    <body>
+        <header> 
+            <div id="cabecero">
+                <div id="Logo-titulo">
+                    <a id="Logo" href="">
+                        <div id="contenedor_imagen" ><img src="assets/images/SeMaslogo_st .png"/></div>
+                        <p class="separacion_elementos_cabecero">Sémás</p>
+                    </a>
+                    <div id="contenedor-titulo"><h2 id="titulo_head">Cursos disponibles</h2></div>
+                </div>
+                <nav>
+                    <a href="SCSE-Register.html" ><i class="glyphicon glyphicon glyphicon-user"></i> Registrarse</a>
+                    <a href="SCSE-Login.html" ><i class="glyphicon glyphicon-log-out"></i> Cerrar sesion</a>
+                </nav>
+            </div>
+        </header><br>
+        <section>
+            <div class="row">
+                <div class="col-md-3"></div>
+                <div class="col-md-6">
+                    <div class="panel color-orange">
+                        <div class="panel-heading text-white text-center">LOGIN</div>
+                        <div class="panel-body color-white border-orange">
+                            <h2>Registrar</h2>
+                            <input type="text" id="username" placeholder="Nombre de usuario"><br>
+                            <input type="password" id="password" placeholder="Contraseña"><br>
+                            <button id="boton">Entrar</button>
+                        </div>
                     </div>
                 </div>
-
-                <!--Formulario de Login y registro-->
-                <div class="contenedor__login-register">
-                    <!--Login-->
-                    <form action="javascript:void(0);" class="formulario__register">
-                        <h2>Iniciar Sesión</h2>
-                        <input type="text" id="username" placeholder="Nombre de usuario"><br><br>
-                        <input type="password" id="password" placeholder="Contraseña"><br><br>
-                        <button id="boton">Entrar</button>
-                    </form>
-                </div>
+                <div class="col-md-3"></div>
             </div>
-
-        </main>
-
-        <script type="text/javascript" src="assets/JS/SCSE-SLR.js"></script>
+        </section>
+        <footer>
+            <div id="contenedor-frase-final"><p>La mejor inversión esta en ti</p></div>
+            <div id="linea-final">
+                <p>2023 SEMAS WEB All Right Reserved.</p>
+                <div id="contenedor-iconos">
+                    <a id="facebook" class="formato-ancla seleccion" href="#"><i class="bi bi-facebook"></i></a>
+                    <a id="youtube" class="formato-ancla seleccion" href="#"><i class="bi bi-youtube"></i></a>
+                    <a id="twitter" class="formato-ancla seleccion" href="#"><i class="bi bi-twitter"></i></a>
+                </div>
+                <a class="formato-ancla seleccion" href="mailto:semas@unmsm.edu.pe">email: semas@unmsm.edu.pe</a>
+            </div>
+        </footer> 
         <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.4.js"></script>
-        <script>
-            
+        <script>           
             $("#boton").on( "click", function() {
 			    var studentdata = { username: $("#username").val(), password: $("#password").val()};
 			    $.ajax({  
@@ -58,5 +76,5 @@
     		    });
             });
         </script>
-</body>
+    </body> 
 </html>
