--- a/views/SCSE-Login.html
+++ b/views/SCSE-Login.html
@@ -27,12 +27,12 @@
             <div class="row">
                 <div class="col-md-3"></div>
                 <div class="col-md-6">
-                    <div class="panel color-orange">
+                    <div class="panel" background="#fa7921" border="solid 1px #fa7921">
                         <div class="panel-heading text-white text-center">LOGIN</div>
                         <div class="panel-body color-white border-orange">
-                            <h2>Registrar</h2>
-                            <input type="text" id="username" placeholder="Nombre de usuario"><br>
-                            <input type="password" id="password" placeholder="Contraseña"><br>
+                            <h2 align="center">USER LOGIN</h2>
+                            <input type="text" id="username" placeholder="Nombre de usuario"><br><br>
+                            <input type="password" id="password" placeholder="Contraseña"><br><br>
                             <button id="boton">Entrar</button>
                         </div>
                     </div>
