--- a/views/SCSE-Login.html
+++ b/views/SCSE-Login.html
@@ -27,8 +27,8 @@
             <div class="row">
                 <div class="col-md-3"></div>
                 <div class="col-md-6">
-                    <div class="panel" background="#fa7921" border="solid 1px #fa7921">
-                        <div class="panel-heading text-white text-center">LOGIN</div>
+                    <div class="panel-warning class">
+                        <div class="panel-heading" align="center">LOGIN</div>
                         <div class="panel-body color-white border-orange">
                             <h2 align="center">USER LOGIN</h2>
                             <input type="text" id="username" placeholder="Nombre de usuario"><br><br>
