--- a/views/SCSE-Login.html
+++ b/views/SCSE-Login.html
@@ -25,19 +25,21 @@
         </header><br>
         <section>
             <div class="row">
-                <div class="col-md-3"></div>
-                <div class="col-md-6">
-                    <div class="panel-warning class">
-                        <div class="panel-heading" align="center">LOGIN</div>
-                        <div class="panel-body color-white border-orange">
-                            <h2 align="center">USER LOGIN</h2>
-                            <input type="text" id="username" placeholder="Nombre de usuario"><br><br>
-                            <input type="password" id="password" placeholder="Contraseña"><br><br>
-                            <button id="boton">Entrar</button>
+                <div class="col-md-4"></div>
+                <div class="col-md-4">
+                    <div class="panel-group">
+                        <div class="panel-warning">
+                            <div class="panel-heading" align="center">LOGIN</div>
+                            <div class="panel-body">
+                                <h2 align="center">USER LOGIN</h2>
+                                <input type="text" id="username" placeholder="Nombre de usuario"><br><br>
+                                <input type="password" id="password" placeholder="Contraseña"><br><br>
+                                <button id="boton">Entrar</button>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3"></div>
+                <div class="col-md-4"></div>
             </div>
         </section>
         <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.4.js"></script>
