--- a/views/SCSE-Login.html
+++ b/views/SCSE-Login.html
@@ -28,7 +28,7 @@
                 <div class="col-md-4"></div>
                 <div class="col-md-4">
                     <div class="panel-group">
-                        <div class="panel-warning">
+                        <div class="panel panel-warning">
                             <div class="panel-heading" align="center">LOGIN</div>
                             <div class="panel-body">
                                 <h2 align="center">USER LOGIN</h2>
