--- a/views/SCSE-Login.html
+++ b/views/SCSE-Login.html
@@ -32,9 +32,9 @@
                             <div class="panel-heading" align="center">LOGIN</div>
                             <div class="panel-body">
                                 <h2 align="center">USER LOGIN</h2>
-                                <input type="text" id="username" placeholder="Nombre de usuario"><br><br>
-                                <input type="password" id="password" placeholder="Contraseña"><br><br>
-                                <button id="boton">Entrar</button>
+                                <input class="form-control" type="text" id="username" placeholder="Nombre de usuario"><br><br>
+                                <input class="form-control" type="password" id="password" placeholder="Contraseña"><br><br>
+                                <button id="boton" class="btn btn-warning">Entrar</button>
                             </div>
                         </div>
                     </div>
