--- a/views/SCSE-Login.html
+++ b/views/SCSE-Login.html
@@ -19,7 +19,6 @@
                 </div>
                 <nav>
                     <a href="SCSE-Register.html" ><i class="glyphicon glyphicon glyphicon-user"></i> Registrarse</a>
-                    <a href="SCSE-Login.html" ><i class="glyphicon glyphicon-log-out"></i> Cerrar sesion</a>
                 </nav>
             </div>
         </header><br>
@@ -30,7 +29,7 @@
                     <div class="panel-group">
                         <div class="panel panel-warning">
                             <div class="panel-heading" align="center">LOGIN</div>
-                            <div class="panel-body">
+                            <div class="panel-body" align="center">
                                 <h2 align="center">USER LOGIN</h2>
                                 <input class="form-control" type="text" id="username" placeholder="Nombre de usuario"><br><br>
                                 <input class="form-control" type="password" id="password" placeholder="Contraseña"><br><br>
