--- a/views/SCSE-Register.html
+++ b/views/SCSE-Register.html
@@ -32,16 +32,16 @@
                             <div class="panel-heading" align="center">REGISTER</div>
                             <div class="panel-body" align="center">
                                 <h2>Registrar</h2>
-                                <input class="form-control" type="text" id="name" placeholder="Nombre">
-                                <input class="form-control" type="text" id="lastname" placeholder="Apellido">
-                                <input class="form-control" type="text" id="mail" placeholder="Correo">
-                                <input class="form-control" type="text" id="username" placeholder="Nombre de usuario">
-                                <input class="form-control" type="password" id="password" placeholder="Contraseña">
+                                <input class="form-control" type="text" id="name" placeholder="Nombre"><br>
+                                <input class="form-control" type="text" id="lastname" placeholder="Apellido"><br>
+                                <input class="form-control" type="text" id="mail" placeholder="Correo"><br>
+                                <input class="form-control" type="text" id="username" placeholder="Nombre de usuario"><br>
+                                <input class="form-control" type="password" id="password" placeholder="Contraseña"><br>
                                 <div class = "container text-left"> 
                                     <label><input type="radio" id="tipo1">Alumno</label>
                                     <label><input type="radio" id="tipo2">Profesor</label>
-                                </div>
-                                <div id="cod"><input class="form-control" type="text" id="code" placeholder="Codigo Alumno"></div>
+                                </div><br>
+                                <div id="cod"><input class="form-control" type="text" id="code" placeholder="Codigo Alumno"><br></div>
                                 <button class="btn btn-warning" id="butonRegistrar">Registrarse</button>
                             </div>
                         </div>
