--- a/views/SCSE-Profesor.html
+++ b/views/SCSE-Profesor.html
@@ -33,9 +33,8 @@
                     <div class="col-md-4"><button class="btn btn-success" id="calificar">Calificar</button></div>
                 </div>
                 <div class="row">
-                    <div class="col-md-4">Personas que calificaron: </div>
+                    <div class="col-md-8">Personas que calificaron: </div><br>
                     <div class="col-md-4"><p id="calificados"></p> </div>
-                    <div class="col-md-4"></div>
                 </div>
             </div>
             <div class="col-md-5">
@@ -190,6 +189,7 @@
       			    type: 'POST',  
       			    data: studentdata,  
       			    success: function(data) { 
+                        $("#calificados").text(data.estado);
       				    alert("Se califico al profesor");		
       			    }
     		    });
