--- a/views/SCSE-Profesor.html
+++ b/views/SCSE-Profesor.html
@@ -190,7 +190,7 @@
       			    data: studentdata,  
       			    success: function(data) { 
                         alert(data.calificar_profesor)
-                        $("#calificados").text(data.calificar_profesor:);
+                        $("#calificados").text(data.calificar_profesor);
       				    alert("Se califico al profesor");		
       			    }
     		    });
