--- a/views/SCSE-Profesor.html
+++ b/views/SCSE-Profesor.html
@@ -189,7 +189,7 @@
       			    type: 'POST',  
       			    data: studentdata,  
       			    success: function(data) { 
-                        alert(data.calificar_profesor)
+                        alert(data)
                         $("#calificados").text(data.calificar_profesor);
       				    alert("Se califico al profesor");		
       			    }
