--- a/views/SCSE-Pago.html
+++ b/views/SCSE-Pago.html
@@ -31,7 +31,7 @@
                         <div class="panel panel-warning">
                             <div class="panel-heading" align="center">CONFIRMAR COMPRA</div>
                             <div class="panel-body" align="center">
-                                <h4 align="center">Rellene los datos de compra</4>
+                                <h4 align="center">Rellene los datos de compra</4><br>
                                 <input class="form-control" type="text" id="tarjeta" placeholder="Ingrese el numero de tarjeta"><br><br>
                                 <input class="form-control" type="text" id="correo" placeholder="Correo"><br><br>
                                 <div class="alert alert-warning">Total : 20 soles</div>
@@ -65,7 +65,7 @@
       			    type: 'POST',  
       			    data: studentdata,  
       			    success: function(data) { 
-                        alert("error de logueo");    			
+                        alert("Se realizo el pago respectivo");    			
       			    }
     		    });
             });
